# ChangeLog for www-apps/ikiwiki
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# ChangeLog: rion overlay ;http://code.google.com/p/rion-overlay/ 
# $Header: $

  09 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +ikiwiki-3.20091113.ebuild:
  add new version

  28 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  -ikiwiki-3.1415926.ebuild, +ikiwiki-3.20091023.ebuild:
  drop old version - tarboll not found

  05 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru> ikiwiki-3.02.ebuild,
  +metadata.xml:
  repoman bug fix

*ikiwiki-3.02